--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_dotenv: ^5.2.1
   get_it: ^8.0.3
   google_sign_in: ^6.3.0
   hive: ^2.2.3
@@ -44,12 +45,13 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icons/mustye_logo.jpg"
+  image_path: "assets/icons/mustye_app_icon.png"
 
 flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/icons/
     - assets/images/
     - assets/lotties/
