--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.2.1
   get_it: ^8.0.3
+  go_router: ^15.1.2
   google_sign_in: ^6.3.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
