--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.7
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
+  firebase_messaging: ^15.2.6
   firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
