--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ dependencies:
   get_it: ^8.0.3
   go_router: ^15.1.2
   google_sign_in: ^6.3.0
+  googleapis: ^14.0.0
+  googleapis_auth: ^2.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  http: ^1.4.0
   iconly: ^1.0.1
   image_picker: ^1.1.2
   intl: ^0.20.2
