--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,16 @@
-GOOGLE_WEB_OAUTH_CLIENT_ID = YOUR_CLIENT_ID_FOR_GOOGLE_WEB_OAUTH
+GOOGLE_WEB_OAUTH_CLIENT_ID = YOUR_GOOGLE_WEB_OAUTH_CLIENT_ID
+
+# For Firebase push notifications
+# Generate these credentials from Your Firebase App
+# Go To Project Settings -> Service Account -> Generate Private Key
+TYPE = ACCOUNT_TYPE
+PROJECT_ID = PROJECT_ID
+PRIVATE_KEY_ID = PRIVATE_KEY_ID
+PRIVATE_KEY = PRIVATE_KEY
+CLIENT_EMAIL = CLIENT_EMAIL
+CLIENT_ID = CLIENT_ID
+AUTH_URI = AUTH_URI
+TOKEN_URI = TOKEN_URI
+AUTH_PROVIDER_X509_CERT_URL = AUTH_PROVIDER_X509_CERT_URL
+CLIENT_X509_CERT_URL = CLIENT_X509_CERT_URL
+UNIVERSE_DOMAIN = UNIVERSE_DOMAIN
