--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.2.1
+  # flutter_local_notifications: ^19.2.1
   get_it: ^8.0.3
   go_router: ^15.1.2
   google_sign_in: ^6.3.0
