--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Backend API's Base Url
+BASE_URL= https://localhost:8080
+
 # For Web Google SignIn
 GOOGLE_WEB_OAUTH_CLIENT_ID = YOUR_GOOGLE_WEB_OAUTH_CLIENT_ID
 
