Added New Features
Detete Chats
Delete Messages
Updated Theme

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   agora_rtc_engine: ^6.5.2
   bloc: ^9.0.0
+  chat_message_timestamp: ^0.0.1
   cloud_firestore: ^5.6.5
   dartz: ^0.10.1
   dio: ^5.8.0+1
