--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   bloc: ^9.0.0
   chat_message_timestamp: ^0.0.1
   cloud_firestore: ^5.6.5
+  contacts_service_plus: ^0.0.2
   dartz: ^0.10.1
   dio: ^5.8.0+1
   equatable: ^2.0.7
@@ -35,6 +36,8 @@ dependencies:
   intl: ^0.20.2
   lottie: ^3.3.1
   path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  phone_numbers_parser: ^9.0.3
   provider: ^6.1.4
   rxdart: ^0.28.0
   shared_preferences: ^2.5.3
