--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.2
   lottie: ^3.3.1
+  otpify: ^0.1.7
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   phone_numbers_parser: ^9.0.3
